fixed margin and header alignment on desktop

--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -47,7 +47,11 @@
   left: 0;
   position: fixed;
   padding: 1em;
-  margin-right:1em;
+  margin-left:1.2em;
+}
+
+.aboutEvanText{
+    margin-right:1.2em;
 }
 
 .nextButton{
@@ -131,9 +135,6 @@
       justify-content: flex-end;
     }
 
-    @nest & ul li a {
-      padding: 0.5rem;
-    }
   }
 }
 
